force-app/main/default/objects/QR_Scan__c/fields/App_Scan_ID__c.field-meta.xml
<CustomField>
    <fullName>App_Scan_ID__c</fullName>
    <description>Internal ID for apps to identify scans</description>
    <label>App Scan ID</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>