force-app/main/default/objects/QR_Scan__c/fields/Data_Scanned__c.field-meta.xml
<CustomField>
    <fullName>Data_Scanned__c</fullName>
    <description>What was actually decoded from the QR code</description>
    <label>Data Scanned</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>