force-app/main/default/objects/QR_Scan__c/fields/Event_or_Conference__c.field-meta.xml
<CustomField>
    <fullName>Event_or_Conference__c</fullName>
    <label>Event or Conference</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>QR Scans</relationshipLabel>
    <relationshipName>QR_Scans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>