force-app/main/default/objects/QR_Scan__c/fields/Event_Session_2__c.field-meta.xml
<CustomField>
    <fullName>Event_Session_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Session 2</label>
    <referenceTo>Event_Session2__c</referenceTo>
    <relationshipLabel>QR Scans</relationshipLabel>
    <relationshipName>QR_Scans</relationshipName>
    <type>Lookup</type>
</CustomField>