force-app/main/default/objects/QR_Scan__c/fields/Scan_Intent__c.field-meta.xml
<CustomField>
    <fullName>Scan_Intent__c</fullName>
    <description
  >Based on the state of the badge scanning app, this will denote the intention of the person scanning the badge.</description>
    <label>Scan Intent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Registration Check-In</fullName>
            </value>
            <value>
                <fullName>Session Attendance</fullName>
            </value>
            <value>
                <fullName>Registration Mark No-Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>