force-app/main/default/objects/QR_Scan__c/fields/Scanned__c.field-meta.xml
<CustomField>
    <fullName>Scanned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who was scanned</description>
    <label>Scanned</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>QR Scans</relationshipLabel>
    <relationshipName>QR_Scans</relationshipName>
    <type>Lookup</type>
</CustomField>