force-app/main/default/objects/QR_Scan__c/fields/Scanned_At__c.field-meta.xml
<CustomField>
    <fullName>Scanned_At__c</fullName>
    <description>When exactly the scan occurred</description>
    <label>Scanned At</label>
    <type>DateTime</type>
</CustomField>