force-app/main/default/objects/QR_Scan__c/fields/Scanner__c.field-meta.xml
<CustomField>
    <fullName>Scanner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person doing the scanning</description>
    <label>Scanner</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>QR Scans (Scanner)</relationshipLabel>
    <relationshipName>QR_Scans1</relationshipName>
    <type>Lookup</type>
</CustomField>