force-app/main/default/objects/QR_Scan__c/fields/Scanner_Account__c.field-meta.xml
<CustomField>
    <fullName>Scanner_Account__c</fullName>
    <description
  >Shows the Account Name of the account listed on the contract associated with the Scanner&apos;s Event Contract. (Scanner = Registration of the person that did the scanning.)</description>
    <formula>Scanner__r.Event_Contract__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Shows the Account Name of the account listed on the contract associated with the Scanner&apos;s Event Contract. (Scanner = Registration of the person that did the scanning.)</inlineHelpText>
    <label>Scanner Account</label>
    <type>Text</type>
</CustomField>