force-app/main/default/objects/QR_Scan__c/fields/Scanner_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Scanner_Account_Id__c</fullName>
    <formula>Scanner__r.Event_Contract__r.Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scanner Account Id</label>
    <type>Text</type>
</CustomField>