force-app/main/default/objects/QR_Scan__c/fields/Scanner_Name__c.field-meta.xml
<CustomField>
    <fullName>Scanner_Name__c</fullName>
    <formula
  >Scanner__r.Registrant_Name__r.FirstName &amp;&quot; &quot;&amp; Scanner__r.Registrant_Name__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scanner Name</label>
    <type>Text</type>
</CustomField>