force-app/main/default/objects/QR_Scan__c/fields/Session_Name__c.field-meta.xml
<CustomField>
    <fullName>Session_Name__c</fullName>
    <formula
  >SUBSTITUTE(SUBSTITUTE(Event_Session_2__r.Title__c,&quot;&amp;ndash;&quot;, &quot;-&quot;),&quot;&amp;rsquo;&quot;, &quot;&apos;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Title</label>
    <type>Text</type>
</CustomField>