force-app/main/default/objects/QR_Scan__c/fields/Tmp_Scanned_Id__c.field-meta.xml
<CustomField>
    <fullName>Tmp_Scanned_Id__c</fullName>
    <description
  >when set a trigger on insert will try to add a real registation_id</description>
    <label>Tmp Scanned Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>