force-app/main/default/objects/QR_Scan__c/fields/Tmp_Scanner_Id__c.field-meta.xml
<CustomField>
    <fullName>Tmp_Scanner_Id__c</fullName>
    <label>Tmp Scanner Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>