force-app/main/default/objects/QR_Scan__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description
  >Scanner_id  (Tmp or not)    + microseconds make this a unique scan</description>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>35</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>